--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-express-ts-btp-api",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +15,9 @@
   "keywords": [],
   "author": "Markus Klein",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "bugs": {
+    "url": "https://github.com/schw4be/create-express-ts-btp-api/issues"
+  },
+  "homepage": "https://github.com/schw4be/create-express-ts-btp-api"  
 }
