--- a/to-delete/package.json
+++ b/to-delete/package.json
@@ -19,9 +19,5 @@
   "bugs": {
     "url": "https://github.com/schw4be/create-express-ts-btp-api/issues"
   },
-  "homepage": "https://github.com/schw4be/create-express-ts-btp-api",
-  "dependencies": {
-    "prompts": "^2.4.1",
-    "ncp": "^2.0.0"
-  }
+  "homepage": "https://github.com/schw4be/create-express-ts-btp-api"  
 }
